--- a/app/src/main/res/menu/menu_article.xml
+++ b/app/src/main/res/menu/menu_article.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
     <item
         android:id="@+id/dictionaryMenuItem"
         android:icon="@drawable/dictionary"
@@ -10,12 +8,7 @@
         android:orderInCategory="10"
         app:showAsAction="always"></item>
 
-    <item
-        android:id="@+id/newsMenuItem"
-        android:icon="@drawable/news"
-        android:title="News Feed"
-        android:orderInCategory="20"
-        app:showAsAction="always"></item>
+
     <item
         android:id="@+id/trackerMenuItem"
         android:icon="@drawable/tracker"
@@ -29,7 +22,9 @@
         android:title="New York Times Article"
         app:showAsAction="always"></item>
 
-
+    <item android:id="@+id/help"
+        android:icon="@drawable/setting" android:title="help"
+        app:showAsAction="never"/>
 
 
 </menu>
