--- a/app/src/main/res/layout/new_york_layout.xml
+++ b/app/src/main/res/layout/new_york_layout.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
