--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -26,7 +26,7 @@
         android:layout_below="@id/DToolbar"
         android:layout_alignParentStart="true"
         android:hint="@string/d_search_hint"
-        android:inputType="textAutoComplete" />
+        android:inputType="text" />
 
 
 
